--- a/playground/includes/playground-components.jade
+++ b/playground/includes/playground-components.jade
@@ -124,6 +124,21 @@ section#components
     button.atk-button-small .atk-button-small
     button.atk-button.atk-swatch-yellow .atk-button
     button.atk-button-large.atk-swatch-ink(href='javascript:void(0)') .atk-button-large
+  p
+    span.atk-label.atk-effect-info .atk-buttonset
+  .atk-box.atk-inline
+    .atk-buttonset
+      a.atk-button-small(href='javascript:void(0)')
+        span.icon-angle-left
+      a.atk-button-small(href='javascript:void(0)')
+        span.icon-calendar
+      a.atk-button-small(href='javascript:void(0)') 1
+      a.atk-button-small(href='javascript:void(0)') 2
+      a.atk-button-small(href='javascript:void(0)') 3
+      a.atk-button-small(href='javascript:void(0)') 4
+      a.atk-button-small(href='javascript:void(0)') 5
+      a.atk-button-small(href='javascript:void(0)')
+        span.icon-angle-right
   h3 Cells
   p 
     | Component&nbsp;
@@ -208,12 +223,9 @@ section#components
         a.atk-padding.atk-swatch-ink(href='javascript:void(0)') Item #2
       li
         a.atk-padding.atk-swatch-ink(href='javascript:void(0)') Item #3
-  p 2 Level Menu
-  .atk-box.atk-inline
-    ul.atk-menu-horizontal
       li.atk-swatch-green
         a.atk-padding.atk-swatch-ink(href='javascript:void(0)')
-          | Item #1&nbsp;
+          | Item #4&nbsp;
           span.icon-down-dir
         ul.atk-menu-horizontal
           li
@@ -228,7 +240,7 @@ section#components
             a.atk-padding-small.atk-swatch-green(href='javascript:void(0)') Subitem #5
       li.atk-swatch-blue
         a.atk-padding.atk-swatch-ink(href='javascript:void(0)')
-          | Item #2&nbsp;
+          | Item #5&nbsp;
           span.icon-down-dir
         ul.atk-menu-vertical
           li
@@ -237,7 +249,7 @@ section#components
             a.atk-padding-small.atk-swatch-blue(href='javascript:void(0)') Subitem #2
       li
         a.atk-padding.atk-swatch-ink(href='javascript:void(0)')
-          | Item #3&nbsp;
+          | Item #6&nbsp;
           span.icon-down-dir
         ul.atk-menu-vertical
           li
@@ -336,50 +348,50 @@ section#components
             a.atk-padding-small.atk-swatch-blue(href='javascript:void(0)') Subitem #4
           li
             a.atk-padding-small.atk-swatch-blue(href='javascript:void(0)') Subitem #5
-  p
-    | Component&nbsp;
-    span.atk-label.atk-effect-info .atk-menu-horizontal
-    | &nbsp;combined with&nbsp;
-    span.atk-label.atk-effect-info .atk-button-small
-    | .
-  .atk-box.atk-inline
-    ul.atk-menu-horizontal
-      li
-        a.atk-swatch-blue.atk-button-small(href='javascript:void(0)')
-          span.icon-angle-left
-      li
-        a.atk-swatch-blue.atk-button-small(href='javascript:void(0)')
-          span.icon-calendar
-      li
-        a.atk-swatch-blue.atk-button-small(href='javascript:void(0)') 1
-        a.atk-swatch-blue.atk-button-small(href='javascript:void(0)') 2
-      li
-        a.atk-swatch-blue.atk-button-small(href='javascript:void(0)') 3
-      li
-        a.atk-swatch-blue.atk-button-small(href='javascript:void(0)') 4
-      li
-        a.atk-swatch-blue.atk-button-small(href='javascript:void(0)') 5
-      li
-        a.atk-swatch-blue.atk-button-small(href='javascript:void(0)')
-          span.icon-angle-right
-  p
-    | Component&nbsp;
-    span.atk-label.atk-effect-info .atk-menu-vertical
-    | &nbsp;combined with&nbsp;
-    span.atk-label.atk-effect-info .atk-button
-    | .
-  .atk-box.atk-col-4
-    ul.atk-menu-vertical
-      li
-        a.atk-swatch-blue.atk-button-large(href='javascript:void(0)') Item #1
-      li
-        a.atk-swatch-blue.atk-button-large(href='javascript:void(0)') Item #2
-      li
-        a.atk-swatch-blue.atk-button-large(href='javascript:void(0)') Item #3
-      li
-        a.atk-swatch-blue.atk-button-large(href='javascript:void(0)') Item #4
-      li
-        a.atk-swatch-blue.atk-button-large(href='javascript:void(0)') Item #5
+  //- p
+  //-   | Component&nbsp;
+  //-   span.atk-label.atk-effect-info .atk-menu-horizontal
+  //-   | &nbsp;combined with&nbsp;
+  //-   span.atk-label.atk-effect-info .atk-button-small
+  //-   | .
+  //- .atk-box.atk-inline
+  //-   ul.atk-menu-horizontal
+  //-     li
+  //-       a.atk-swatch-blue.atk-button-small(href='javascript:void(0)')
+  //-         span.icon-angle-left
+  //-     li
+  //-       a.atk-swatch-blue.atk-button-small(href='javascript:void(0)')
+  //-         span.icon-calendar
+  //-     li
+  //-       a.atk-swatch-blue.atk-button-small(href='javascript:void(0)') 1
+  //-       a.atk-swatch-blue.atk-button-small(href='javascript:void(0)') 2
+  //-     li
+  //-       a.atk-swatch-blue.atk-button-small(href='javascript:void(0)') 3
+  //-     li
+  //-       a.atk-swatch-blue.atk-button-small(href='javascript:void(0)') 4
+  //-     li
+  //-       a.atk-swatch-blue.atk-button-small(href='javascript:void(0)') 5
+  //-     li
+  //-       a.atk-swatch-blue.atk-button-small(href='javascript:void(0)')
+  //-         span.icon-angle-right
+  //- p
+  //-   | Component&nbsp;
+  //-   span.atk-label.atk-effect-info .atk-menu-vertical
+  //-   | &nbsp;combined with&nbsp;
+  //-   span.atk-label.atk-effect-info .atk-button
+  //-   | .
+  //- .atk-box.atk-col-4
+  //-   ul.atk-menu-vertical
+  //-     li
+  //-       a.atk-swatch-blue.atk-button-large(href='javascript:void(0)') Item #1
+  //-     li
+  //-       a.atk-swatch-blue.atk-button-large(href='javascript:void(0)') Item #2
+  //-     li
+  //-       a.atk-swatch-blue.atk-button-large(href='javascript:void(0)') Item #3
+  //-     li
+  //-       a.atk-swatch-blue.atk-button-large(href='javascript:void(0)') Item #4
+  //-     li
+  //-       a.atk-swatch-blue.atk-button-large(href='javascript:void(0)') Item #5
   h3 Paddings & Margins
   h4 Actions
   p
