--- a/playground/includes/playground-typography.jade
+++ b/playground/includes/playground-typography.jade
@@ -79,6 +79,6 @@ section#typography
         h5 Heading h5
         h6 Heading h6
   h3 Undocumented classes
-  p .atk-text-lead, .atk-text-bold, .atk-text-normal, .atk-text-dimmed, .atk-text-nowrap, .atk-text-reset, .atk-text-baseline-reset, .atk-text-ellipsis, .atk-text-left, .atk-text-right, .atk-align-center
+  p .atk-text-lead, .atk-text-bold, .atk-text-normal, .atk-text-dimmed, .atk-text-nowrap, .atk-text-reset, .atk-text-baseline-reset, .atk-text-ellipsis
   h4 Classes for HR
   p .atk-hr-small, .atk-hr-large, .atk-hr-dotted, .atk-hr-reset
