Tryin to fix IE

--- a/framework/less/widgets.less
+++ b/framework/less/widgets.less
@@ -34,7 +34,7 @@
     table {
         width: 100%;
         thead th, tbody td {
-            background: #fff;
+            // background: #fff;
             &:not([class*=atk-padding]):not([class*=atk-section]):not(.atk-table-sort) {
                 padding-bottom: @py;
                 padding-left: @px;
