--- a/playground/includes/playground-widgets.jade
+++ b/playground/includes/playground-widgets.jade
@@ -274,26 +274,26 @@ section#widgets
             td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr.atk-table-expander
-            td.atk-padding(colspan='3')
-              h4 Basic Form
-              .atk-form.atk-form-stacked.atk-form-compact
-                form
-                  .atk-form-fieldset
-                    .atk-cells
-                      .atk-cell
-                        label Input:
-                      .atk-cell.atk-jackscrew
-                        input(type='text')
-                    .atk-cells
-                      .atk-cell
-                        label Textarea:
-                      .atk-cell
-                        textarea(rows='3')
-                  .atk-cells
-                    .atk-cell
-                    .atk-cell.atk-actions
-                      button.atk-button Okay
-                      button.atk-button Cancel
+            td.atk-padding.atk-swatch-gray.atk-text-inherit(colspan='3')
+              h4 Compact Form
+              form.atk-form.atk-cells-group.atk-cells-gutter-large
+                .atk-cells.atk-push-small
+                  .atk-cell.atk-text-nowrap
+                    label.atk-input-label
+                      strong Input:
+                  .atk-cell.atk-jackscrew
+                    input(type="text",size="9")
+                .atk-cells.atk-push-small
+                  .atk-cell.atk-text-nowrap
+                    label.atk-input-label
+                      strong Password:
+                  .atk-cell.atk-jackscrew
+                    input(type="password",class="atk-jackscrew")
+                .atk-cells
+                  .atk-cell 
+                  .atk-cell.atk-actions.atk-jackscrew
+                    button.atk-button Submit
+                    button.atk-button Cancel
           tr
             td.atk-text-nowrap
               a.icon-right-dir(href='javascript:void(0)')
@@ -302,26 +302,26 @@ section#widgets
             td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr.atk-table-expander
-            td.atk-padding(colspan='3')
-              h4 Basic Form
-              .atk-form.atk-form-stacked.atk-form-compact
-                form
-                  .atk-form-fieldset
-                    .atk-cells
-                      .atk-cell
-                        label Input:
-                      .atk-cell.atk-jackscrew
-                        input(type='text')
-                    .atk-cells
-                      .atk-cell
-                        label Textarea:
-                      .atk-cell
-                        textarea(rows='3')
-                  .atk-cells
-                    .atk-cell
-                    .atk-cell.atk-actions
-                      button.atk-button Okay
-                      button.atk-button Cancel
+            td.atk-padding.atk-swatch-gray.atk-text-inherit(colspan='3')
+              h4 Compact Form
+              form.atk-form.atk-cells-group.atk-cells-gutter-large
+                .atk-cells.atk-push-small
+                  .atk-cell.atk-text-nowrap
+                    label.atk-input-label
+                      strong Input:
+                  .atk-cell.atk-jackscrew
+                    input(type="text",size="9")
+                .atk-cells.atk-push-small
+                  .atk-cell.atk-text-nowrap
+                    label.atk-input-label
+                      strong Password:
+                  .atk-cell.atk-jackscrew
+                    input(type="password",class="atk-jackscrew")
+                .atk-cells
+                  .atk-cell 
+                  .atk-cell.atk-actions.atk-jackscrew
+                    button.atk-button Submit
+                    button.atk-button Cancel
           tr
             td.atk-text-nowrap
               a.icon-right-dir(href='javascript:void(0)')
@@ -330,26 +330,26 @@ section#widgets
             td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr.atk-table-expander
-            td.atk-padding(colspan='3')
-              h4 Basic Form
-              .atk-form.atk-form-stacked.atk-form-compact
-                form
-                  .atk-form-fieldset
-                    .atk-cells
-                      .atk-cell
-                        label Input:
-                      .atk-cell.atk-jackscrew
-                        input(type='text')
-                    .atk-cells
-                      .atk-cell
-                        label Textarea:
-                      .atk-cell
-                        textarea(rows='3')
-                  .atk-cells
-                    .atk-cell
-                    .atk-cell.atk-actions
-                      button.atk-button Okay
-                      button.atk-button Cancel
+            td.atk-padding.atk-swatch-gray.atk-text-inherit(colspan='3')
+              h4 Compact Form
+              form.atk-form.atk-cells-group.atk-cells-gutter-large
+                .atk-cells.atk-push-small
+                  .atk-cell.atk-text-nowrap
+                    label.atk-input-label
+                      strong Input:
+                  .atk-cell.atk-jackscrew
+                    input(type="text",size="9")
+                .atk-cells.atk-push-small
+                  .atk-cell.atk-text-nowrap
+                    label.atk-input-label
+                      strong Password:
+                  .atk-cell.atk-jackscrew
+                    input(type="password",class="atk-jackscrew")
+                .atk-cells
+                  .atk-cell 
+                  .atk-cell.atk-actions.atk-jackscrew
+                    button.atk-button Submit
+                    button.atk-button Cancel
           tr
             td.atk-text-nowrap
               a.icon-right-dir(href='javascript:void(0)')
@@ -358,36 +358,26 @@ section#widgets
             td.atk-align-center
               a(href='javascript:void(0)') Edit
           tr.atk-table-expander
-            td.atk-padding(colspan='3')
-              h4 Basic Form
-              .atk-form.atk-form-stacked.atk-form-compact
-                form
-                  .atk-form-fieldset
-                    .atk-cells
-                      .atk-cell
-                        label Input:
-                      .atk-cell.atk-jackscrew
-                        input(type='text')
-                    .atk-cells
-                      .atk-cell
-                        label Dropdown:
-                      .atk-cell
-                        select(name='speed')
-                          option(value='Slower') Slower
-                          option(value='Slow') Slow
-                          option(value='Medium', selected='selected') Medium Roast
-                          option(value='Fast') Fast
-                          option(value='Faster') Faster
-                    .atk-cells
-                      .atk-cell
-                        label Textarea:
-                      .atk-cell
-                        textarea(rows='3')
-                  .atk-cells
-                    .atk-cell
-                    .atk-cell.atk-actions
-                      button.atk-button Okay
-                      button.atk-button Cancel
+            td.atk-padding.atk-swatch-gray.atk-text-inherit(colspan='3')
+              h4 Compact Form
+              form.atk-form.atk-cells-group.atk-cells-gutter-large
+                .atk-cells.atk-push-small
+                  .atk-cell.atk-text-nowrap
+                    label.atk-input-label
+                      strong Input:
+                  .atk-cell.atk-jackscrew
+                    input(type="text",size="9")
+                .atk-cells.atk-push-small
+                  .atk-cell.atk-text-nowrap
+                    label.atk-input-label
+                      strong Password:
+                  .atk-cell.atk-jackscrew
+                    input(type="password",class="atk-jackscrew")
+                .atk-cells
+                  .atk-cell 
+                  .atk-cell.atk-actions.atk-jackscrew
+                    button.atk-button Submit
+                    button.atk-button Cancel
   // [Widget] Table: With Panels
   p
     span.atk-label.atk-effect-info .atk-table
