Fixed markup for IE

--- a/playground/layouts/responsive.jade
+++ b/playground/layouts/responsive.jade
@@ -9,7 +9,7 @@ html(class='no-js')
     meta(charset='utf-8')
     <!--[if IE]><!-->
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    <!--[endif]-->
+    <!--<![endif]-->
     title Agile Toolkit CSS
     meta(name='description', content='')
     meta(name="viewport", content="width=device-width, initial-scale=1")
