--- a/playground/includes/head.jade
+++ b/playground/includes/head.jade
@@ -2,7 +2,7 @@ head
   meta(charset='utf-8')
   <!--[if IE]><!-->
   meta(http-equiv='X-UA-Compatible', content='IE=edge')
-  <!--[endif]-->
+  <!--<![endif]-->
   title Agile Toolkit CSS
   meta(name='description', content='')
   link(rel='stylesheet', href='css/theme.css')
