--- a/framework/less/layouts.less
+++ b/framework/less/layouts.less
@@ -1,15 +1,6 @@
 // ==========================================================
-// Layouts
+// Layouts (credit: Pixel vs. Bytes)
 // ==========================================================
-
-// @windowMinWidth: @siteMinWidth + @siteMargin*2;
-
-// Flexible Layout (credit: Pixel vs. Bytes)
-// .siteMargins(@a) when not (ispercentage(@a)) {
-// 	padding-left: (@windowMinWidth - @siteMinWidth)/2;
-// 	padding-right: (@windowMinWidth - @siteMinWidth)/2;
-// 	max-width: @siteMaxWidth + (@windowMinWidth - @siteMinWidth);
-// }
 html, body  {
 	height: 100%; /* INFO Optional CSS for a sticky footer */
 }
@@ -18,22 +9,28 @@ html, body  {
 	display: table;
 	height: 100%;
 	width: 100%;
+	>.atk-layout-row, >.atk-layout-row>.atk-layout-cell, >.atk-layout-column {
+		height: 0.1%;
+		position: relative;
+	}
 	>.atk-layout-row {
 		display: table-row;
 		height: 1px;
 		>.atk-layout-cell {
 			min-width: 100%;
 		}
-		&.atk-layout-fluid {
-			// height: auto;
-			height: 100%;
+		&.atk-layout-expand {
+			height: auto;
 		}
 	}
 	>.atk-layout-column {
 		display: table-cell;
-		min-width: 1px;
-		position: relative;
+		height: auto;
 		vertical-align: top;
+		width: 1px;
+		&.atk-layout-expand {
+			width: auto;
+		}
 	}
 	body>& {
 		table-layout: fixed; /* NOTE Speed up table rendering */
