Testing new layout.

--- a/framework/css/compact.css
+++ b/framework/css/compact.css
@@ -4684,42 +4684,39 @@ body {
   height: 100%;
   /* INFO Optional CSS for a sticky footer */
 }
-.atk-layout {
+* > .atk-layout {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   display: table;
-  height: 100%;
   width: 100%;
+  height: 100%;
 }
+/* NOTE This is the only block IE7- should read */
 .atk-layout > .atk-layout-row,
-.atk-layout > .atk-layout-row > .atk-layout-cell,
-.atk-layout > .atk-layout-column {
+.atk-layout > .atk-layout-column,
+.atk-layout > .atk-layout-row > .atk-layout-column {
   height: 0.1%;
+  /* NOTE: Forces child-margins inside the box */
   position: relative;
 }
 .atk-layout > .atk-layout-row {
   display: table-row;
   height: 1px;
 }
-.atk-layout > .atk-layout-row > .atk-layout-cell {
-  min-width: 100%;
-}
-.atk-layout > .atk-layout-row.atk-layout-expand {
+.atk-layout > .atk-layout-row.atk-layout-fluid {
   height: auto;
 }
-.atk-layout > .atk-layout-column {
+.atk-layout > .atk-layout-column,
+.atk-layout > .atk-layout-row > .atk-layout-column {
   display: table-cell;
   height: auto;
-  vertical-align: top;
+  /* NOTE Just to reset the IE7 fix */
   width: 1px;
 }
-.atk-layout > .atk-layout-column.atk-layout-expand {
+.atk-layout > .atk-layout-column.atk-layout-fluid,
+.atk-layout > .atk-layout-row > .atk-layout-column.atk-layout-fluid {
   width: auto;
-}
-body > .atk-layout {
-  table-layout: fixed;
-  /* NOTE Speed up table rendering */
 }
 .atk-wrapper {
   margin-left: auto;
