IE layout test.

--- a/playground/layouts/fluid.jade
+++ b/playground/layouts/fluid.jade
@@ -23,7 +23,7 @@ html(class='no-js')
             h2 Header Area
       div.atk-layout-row.atk-layout-fluid
         div.atk-layout.atk-layout-cell
-          div.atk-layout-column.atk-swatch-gray.atk-col-3
+          div.atk-layout-column(style="background:red")
             div.atk-padding
               h2 Left Sidebar
               p
