--- a/playground/includes/head.jade
+++ b/playground/includes/head.jade
@@ -6,3 +6,4 @@ head
   title Agile Toolkit CSS
   meta(name='description', content='')
   link(rel='stylesheet', href='css/theme.css')
+  script(src='js/atk-helpers-min.js')
