--- a/playground/layouts/fluid.jade
+++ b/playground/layouts/fluid.jade
@@ -13,6 +13,7 @@ html(class='no-js')
     title Agile Toolkit CSS
     meta(name='description', content='')
     link(rel='stylesheet', href='../css/theme-fluid.css')
+    script(src='../js/atk-helpers-min.js')
   body
     include ../includes/browsehappy
     include ../includes/analytics
@@ -23,7 +24,7 @@ html(class='no-js')
             h2 Header Area
       div.atk-layout-row.atk-layout-fluid
         div.atk-layout.atk-layout-cell
-          div.atk-layout-column(style="background:red")
+          div.atk-layout-column.atk-swatch-gray.atk-col-3
             div.atk-padding
               h2 Left Sidebar
               p
