--- a/playground/layouts/fluid.jade
+++ b/playground/layouts/fluid.jade
@@ -23,7 +23,7 @@ html(class='no-js')
           div.atk-wrapper.atk-padding-small
             h2 Header Area
       div.atk-layout-row.atk-layout-fluid
-        div.atk-layout.atk-layout-cell
+        div.atk-layout.atk-layout-cell#atk-layout-content
           div.atk-layout-column.atk-swatch-gray.atk-col-3
             div.atk-padding
               h2 Left Sidebar
