--- a/playground/layouts/layout-test.html
+++ b/playground/layouts/layout-test.html
@@ -84,6 +84,7 @@
 		}
 	</style>
 	<title>Pixels vs. Bytes | Example: This CSS layout grid is no Holy Grail</title>
+	<link href="../css/theme-fluid.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <!-- INFO Some Chrome extensions need the display-property of the body to be 'block' -->
