--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -299,7 +299,7 @@ ul[class*=atk-menu] {
 .atk-block {
     display: block;
 }
-.atk-jackscrew {
+.atk-jackscrew, .atk-expand {
     width: 100%;
 }
 .atk-clear-fix {
