--- a/playground/index.jade
+++ b/playground/index.jade
@@ -10,9 +10,9 @@ html(class='no-js')
     include includes/browsehappy
     .atk-layout
       include includes/header
-      .atk-layout-row.fluid
-        .atk-layout
-          .atk-layout-column.fluid
+      .atk-layout-row.atk-layout-expand
+        .atk-layout.atk-layout-cell#atk-layout-content
+          .atk-layout-column.atk-layout-expand
             .atk-wrapper.atk-section-large
               include includes/playground-gridsystem
               include includes/playground-typography
