--- a/playground/layouts/fixed-multicol.jade
+++ b/playground/layouts/fixed-multicol.jade
@@ -13,6 +13,7 @@ html(class='no-js')
 		title Agile Toolkit CSS
 		meta(name='description', content='')
 		link(rel='stylesheet', href='../css/theme-fixed.css')
+		script(src='../js/atk-helpers-min.js')
 	body
 		include ../includes/browsehappy
 		include ../includes/analytics
