--- a/playground/layouts/fluid.jade
+++ b/playground/layouts/fluid.jade
@@ -22,14 +22,14 @@ html(class='no-js')
         div.atk-layout-cell.atk-swatch-ink
           div.atk-wrapper.atk-padding-small
             h2 Header Area
-      div.atk-layout-row.atk-layout-fluid
+      div.atk-layout-row.atk-layout-expand
         div.atk-layout.atk-layout-cell#atk-layout-content
           div.atk-layout-column.atk-swatch-gray.atk-col-3
             div.atk-padding
               h2 Left Sidebar
               p
                 | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget justo eget nisl mattis posuere eu ut neque. Aenean congue mollis est, ac viverra mauris bibendum et. Donec facilisis quam id semper accumsan. Curabitur nibh dui, lobortis nec elit et, sagittis sollicitudin magna.
-          div.atk-layout-column
+          div.atk-layout-column.atk-layout-expand
             div.atk-wrapper.atk-padding-large
               h2 Content Area
               p
