--- a/playground/layouts/hybrid.jade
+++ b/playground/layouts/hybrid.jade
@@ -9,10 +9,11 @@ html(class='no-js')
 		meta(charset='utf-8')
 		<!--[if IE]><!-->
 		meta(http-equiv='X-UA-Compatible', content='IE=edge')
-		<!--[endif]-->
+		<!--<![endif]-->
 		title Agile Toolkit CSS
 		meta(name='description', content='')
 		link(rel='stylesheet', href='../css/theme-hybrid.css')
+		script(src='../js/atk-helpers-min.js')
 	body
 		include ../includes/browsehappy
 		include ../includes/analytics
