--- a/playground/examples/form-login.jade
+++ b/playground/examples/form-login.jade
@@ -10,7 +10,7 @@ html(class='no-js')
     <!--[if IE]><!-->
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name="viewport",content="width=device-width, initial-scale=1")
-    <!--[endif]-->
+    <!--<![endif]-->
     title Agile Toolkit CSS
     meta(name='description', content='')
     link(rel='stylesheet', href='../css/theme-example-login.css')
