--- a/playground/layouts/reference.jade
+++ b/playground/layouts/reference.jade
@@ -9,7 +9,7 @@ html(class='no-js')
     meta(charset='utf-8')
     <!--[if IE]><!-->
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    <!--[endif]-->
+    <!--<![endif]-->
     title Agile Toolkit CSS
     meta(name='description', content='')
     link(rel='stylesheet', href='../css/reference.css')
