--- a/framework/less/layouts.less
+++ b/framework/less/layouts.less
@@ -9,7 +9,7 @@ html, body, .atk-layout  {
 	display: table;
 	width: 100%;
 	>.atk-layout-row, >.atk-layout-column, .atk-layout-row>.atk-layout-column {
-		height: 0.1%; /* NOTE: Forces child-margins inside the box */
+		height: 0.1%;
 		position: relative;
 	}
 	>.atk-layout-row {
@@ -21,7 +21,7 @@ html, body, .atk-layout  {
 	}
 	>.atk-layout-column, >.atk-layout-row>.atk-layout-column {
 		display: table-cell;
-		height: auto; /* NOTE Just to reset the IE7 fix */
+		height: auto;
 		width: 1px;
 		&.atk-layout-fluid, &.atk-layout-expand {
 			width: auto;
