Map Browser Testing

--- a/playground/examples/map-browser.jade
+++ b/playground/examples/map-browser.jade
@@ -23,7 +23,7 @@ html(class='no-js')
           .atk-wrapper.atk-padding-small
             h2 Header Area
       .atk-layout-row.atk-layout-expand
-        .atk-layout.atk-layout-cell#atk-layout-content
+        .atk-layout.atk-layout-cell
           .atk-layout-column.atk-swatch-gray.atk-col-3
             .atk-padding
               h3 Stacked Form
