--- a/playground/examples/form-login.jade
+++ b/playground/examples/form-login.jade
@@ -14,12 +14,13 @@ html(class='no-js')
     title Agile Toolkit CSS
     meta(name='description', content='')
     link(rel='stylesheet', href='../css/theme-example-login.css')
+    script(src='../js/atk-helpers-min.js')
   body
     include ../includes/browsehappy
     include ../includes/analytics
     .atk-layout
-      .atk-layout-row.atk-layout-fluid
-        .atk-layout.atk-layout-cell
+      .atk-layout-row.atk-layout-expand
+        .atk-layout.atk-layout-cell#atk-layout-content
           .atk-layout-column.atk-layout-fluid.atk-valign-middle
             .atk-wrapper.atk-padding-small
               .atk-box
