--- a/playground/layouts.jade
+++ b/playground/layouts.jade
@@ -10,9 +10,9 @@ html(class='no-js')
     include includes/browsehappy
     .atk-layout
       include includes/header
-      .atk-layout-row.atk-layout-fluid
-          .atk-layout.atk-layout-cell
-              .atk-layout-column.atk-layout-fluid
+      .atk-layout-row.atk-layout-expand
+          .atk-layout.atk-layout-cell#atk-layout-content
+              .atk-layout-column.atk-layout-expand
                 .atk-wrapper.atk-section-large
                   h2 Layout Templates
                   p
@@ -82,14 +82,5 @@ html(class='no-js')
                               span.atk-box.atk-inline
                         .atk-align-center.atk-size-kilo
                           a(href='layouts/centered.html') Centered
-                    //- .atk-col-4
-                    //-   .atk-box-small.layout-template
-                    //-     a.atk-box-small.atk-swatch-gray.atk-push-small(href='layouts/responsive.html')
-                    //-       span.atk-cells
-                    //-         .atk-cell.atk-actions.atk-valign-middle.atk-align-center.atk-text-baseline-reset(style="height:134px")
-                    //-             span.icon-tablet.atk-size-yotta.atk-swatch-ink
-                    //-             span.icon-laptop.atk-size-yotta.atk-swatch-ink
-                    //-     .atk-align-center.atk-size-kilo
-                    //-       a(href='layouts/responsive.html') Responsive
     include includes/scripts
     include includes/analytics
