--- a/playground/layouts/hybrid.jade
+++ b/playground/layouts/hybrid.jade
@@ -23,7 +23,7 @@ html(class='no-js')
 					div.atk-wrapper.atk-section-small
 						h2 Header Section
 			div.atk-layout-row
-				div.atk-layout.atk-layout-cell
+				div.atk-layout.atk-layout-cell#atk-layout-content
 					div.atk-layout-column.atk-layout-fluid
 						div.atk-section-large.atk-swatch-blue
 							div.atk-wrapper
@@ -37,7 +37,7 @@ html(class='no-js')
 									| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, iure temporibus quaerat delectus dignissimos incidunt laboriosam repellat ad. Qui incidunt distinctio soluta architecto esse perspiciatis aspernatur ducimus placeat modi magni.
 								p
 									| Morbi in mollis massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar adipiscing augue a vehicula. Cras nec quam lectus. Nulla vestibulum lacus non adipiscing viverra. Cras semper leo at metus iaculis venenatis. Morbi mollis augue nunc, ut aliquam est euismod feugiat.
-			div.atk-layout-row.atk-layout-fluid
+			div.atk-layout-row.atk-layout-expand
 				div.atk-layout-cell.atk-swatch-gray
 					div.atk-wrapper.atk-section
 						h2 Footer Section
