Updated example layout markup

--- a/playground/layouts/fixed-multicol.jade
+++ b/playground/layouts/fixed-multicol.jade
@@ -23,8 +23,8 @@ html(class='no-js')
 					div.atk-wrapper.atk-section-small
 						h2 Header Section
 			div.atk-layout-row
-				div.atk-layout.atk-layout-cell
-					div.atk-layout-column.atk-layout-fluid
+				div.atk-layout.atk-layout-cell#atk-layout-content
+					div.atk-layout-column.atk-layout-expand
 						div.atk-section-large.atk-swatch-yellow
 							div.atk-wrapper
 								h2 Hero Section
@@ -44,7 +44,7 @@ html(class='no-js')
 											h2 Sidebar
 											p
 												| Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget justo eget nisl mattis posuere eu ut neque. Aenean congue mollis est, ac viverra mauris bibendum et. Donec facilisis quam id semper accumsan. Curabitur nibh dui, lobortis nec elit et, sagittis sollicitudin magna. Fusce id interdum est. Donec tempor dignissim interdum. Nulla eu dignissim risus.
-			div.atk-layout-row.atk-layout-fluid.atk-swatch-gray
+			div.atk-layout-row.atk-layout-expand.atk-swatch-gray
 				div.atk-layout-cell
 					div.atk-wrapper.atk-section
 						h2 Footer Section
