--- a/playground/layouts/fixed.jade
+++ b/playground/layouts/fixed.jade
@@ -23,8 +23,8 @@ html(class='no-js')
 					div.atk-wrapper.atk-section-small
 						h2 Header Section
 			div.atk-layout-row
-				div.atk-layout.atk-layout-cell
-					div.atk-layout-column.atk-layout-fluid
+				div.atk-layout.atk-layout-cell#atk-layout-content
+					div.atk-layout-column.atk-layout-expand
 						div.atk-section-large.atk-swatch-yellow
 							div.atk-wrapper
 								h2 Hero Section
@@ -37,7 +37,7 @@ html(class='no-js')
 									| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, iure temporibus quaerat delectus dignissimos incidunt laboriosam repellat ad. Qui incidunt distinctio soluta architecto esse perspiciatis aspernatur ducimus placeat modi magni.
 								p
 									| Morbi in mollis massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar adipiscing augue a vehicula. Cras nec quam lectus. Nulla vestibulum lacus non adipiscing viverra. Cras semper leo at metus iaculis venenatis. Morbi mollis augue nunc, ut aliquam est euismod feugiat.
-			div.atk-layout-row.atk-layout-fluid.atk-swatch-gray
+			div.atk-layout-row.atk-layout-expand.atk-swatch-gray
 				div.atk-layout-cell
 					div.atk-wrapper.atk-section
 						h2 Footer Section
