Updated example layout markup

--- a/playground/examples/form-login.jade
+++ b/playground/examples/form-login.jade
@@ -21,7 +21,7 @@ html(class='no-js')
     .atk-layout
       .atk-layout-row.atk-layout-expand
         .atk-layout.atk-layout-cell#atk-layout-content
-          .atk-layout-column.atk-layout-fluid.atk-valign-middle
+          .atk-layout-column.atk-layout-expand.atk-valign-middle
             .atk-wrapper.atk-padding-small
               .atk-box
                 .atk-push.atk-align-center
